bugfix on IE footer

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -20,6 +20,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 p {
@@ -276,7 +277,6 @@ img {
 }
 
 .s-switcher select {
-  height: 2.7em;
   padding: 0.85em 2.25em 0.85em 1.25em;
   outline: 0;
   background: transparent;
